[package]
name = "downloader"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
sled = "0.34.6"
tokio = { version = "0.2.23", features = ["full"] }
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
telegram-bot = "0.8.0"
chrono = "0.4.19"
smol = "1.2.5"
futures = "0.3.12"
